--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 	<meta charset="UTF-8" />
 	<head>
 		<title>Omishe: Aprendiendo mas cosas</title>
+		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="css/estilos.css" />
 	</head>
 	<body>
 		<header>
-			<div class="logo">
-				<img src/img/logo.png  align="Omishe"/>
+			<div class="logo left">
+				<img src="img/logo.png"  alt="Omishe"/>
 			</div>
 			<div class="titular">
 				<h1 class="titulo">Omishe Aprende más</h1>
